--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         /* Section Hero */
         .hero {
             position: relative;
-            min-height: 100vh;
+            max-width: 800px;
             display: flex;
             align-items: center;
             background: linear-gradient(135deg, #1E293B 0%, #2563EB 60%, #60A5FA 100%);
@@ -1704,7 +1704,7 @@
             
             /* Correction pour éviter que le hero soit caché par la navbar */
             .hero {
-                padding-top: 40px; /* Augmenté pour éviter le chevauchement */
+                padding: 120px 0 60px; /* Augmenté pour éviter le chevauchement */
                 padding-bottom: 140px;
                 min-height: auto;
             }
@@ -3418,4 +3418,5 @@
     </script>
 </body>
 </html>
+
 
