--- a/index.html
+++ b/index.html
@@ -231,12 +231,13 @@
         /* Section Hero */
         .hero {
             position: relative;
-            max-width: 800px;
+            min-height: 100vh;
             display: flex;
             align-items: center;
             background: linear-gradient(135deg, #1E293B 0%, #2563EB 60%, #60A5FA 100%);
-            padding: 120px 0 60px;
             overflow: hidden;
+            margin-top: 80px;
+            padding: 150px 0 60px;
         }
 
         .hero-overlay {
@@ -1352,10 +1353,10 @@
             background: var(--gold);
             color: var(--dark-navy);
             border: none;
-            width: 55px;
-            height: 55px;
+            width: 45px;
+            height: 45px;
             border-radius: 50%;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             cursor: pointer;
             transition: all 0.3s ease;
             display: flex;
@@ -1371,11 +1372,11 @@
         }
 
         .team-arrow.prev {
-            left: -70px;
+            left: -60px;
         }
 
         .team-arrow.next {
-            right: -70px;
+            right: -60px;
         }
 
         .team-dots {
@@ -3418,5 +3419,6 @@
     </script>
 </body>
 </html>
+
 
 
