--- a/contact.html
+++ b/contact.html
@@ -1319,7 +1319,7 @@
                         <li><a href="index.html#traduction">Assistance Logement</a></li>
                         <li><a href="index.html#traduction">Assistance Titre de Séjour</a></li>
                         <li><a href="index.html#traduction">Admissions</a></li>
-                        <li><a href="index.html#traduction">Autres Services</a></li>
+                        <li><a href="galerie.html"></i> Galerie Photo/Video</a></li>
                     </ul>
                 </li>
                 <li><a href="index.html#universites"><i class="fas fa-university"></i> Envoyer/Recevoir un colis</a></li>
