--- a/galerie.html
+++ b/galerie.html
@@ -699,7 +699,7 @@
             /* 4. MENU MOBILE - CORRECTION DU PROBLÈME DES SOUS-MENUS */
             .nav-menu {
                 position: fixed;
-                left: -100%;
+                right: -100%;
                 top: 70px;
                 flex-direction: column;
                 background: var(--soft-white);
@@ -1816,3 +1816,4 @@
     </script>
 </body>
 </html>
+
