--- a/galerie.html
+++ b/galerie.html
@@ -715,7 +715,8 @@
             }
             
             .nav-menu.active {
-                left: 0;
+                right: 0; 
+                left: auto;
             }
             
             .nav-menu > li {
@@ -1816,5 +1817,6 @@
     </script>
 </body>
 </html>
+
 
 
