--- a/galerie.html
+++ b/galerie.html
@@ -704,7 +704,7 @@
                 flex-direction: column;
                 background: var(--soft-white);
                 width: 100%;
-                text-align: right;
+                text-align: left;
                 transition: 0.3s;
                 padding: 1rem 0;
                 gap: 0;
@@ -1817,6 +1817,7 @@
     </script>
 </body>
 </html>
+
 
 
 
