--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,6 @@
             width: 100%;
         }
 
-        /* Typographie améliorée */
         h1, h2, h3, h4 {
             font-family: 'Playfair Display', serif;
             font-weight: 700;
@@ -78,7 +77,6 @@
         h3 { font-size: 2rem; }
         h4 { font-size: 1.5rem; }
 
-        /* Container pour alignement */
         .container {
             max-width: 1400px;
             margin: 0 auto;
@@ -184,6 +182,12 @@
             color: var(--gold);
         }
 
+        .nav-menu a i {
+            font-size: 1rem;
+            width: 20px;
+            text-align: center;
+        }
+
         /* Sous-menu */
         .has-submenu {
             position: relative;
@@ -215,14 +219,23 @@
         .submenu li a {
             padding: 0.75rem 1.5rem;
             color: var(--text-dark);
-            display: block;
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
             transition: var(--transition);
+            font-size: 0.85rem;
         }
 
         .submenu li a:hover {
             background: var(--cream);
             color: var(--primary-blue);
             padding-left: 2rem;
+        }
+
+        .submenu li a i {
+            font-size: 0.9rem;
+            width: 18px;
+            color: var(--gold);
         }
 
         /* Menu mobile */
@@ -1311,18 +1324,18 @@
                 <li class="has-submenu">
                     <a href="index.html#services"><i class="fas fa-passport"></i> Nos Services <i class="fas fa-chevron-down"></i></a>
                     <ul class="submenu">
-                        <li><a href="index.html#visas">Visa d'Etude</a></li>
-                        <li><a href="index.html#visas">Visa de Travail</a></li>
-                        <li><a href="index.html#visas">Visa Visiteur</a></li>
-                        <li><a href="index.html#immigration">Résidence Permanente</a></li>
-                        <li><a href="index.html#visas">Billets d'avion</a></li>
-                        <li><a href="index.html#traduction">Assistance Logement</a></li>
-                        <li><a href="index.html#traduction">Assistance Titre de Séjour</a></li>
-                        <li><a href="index.html#traduction">Admissions</a></li>
-                        <li><a href="galerie.html"></i> Galerie Photo/Video</a></li>
+                        <li><a href="#etude.html"><i class="fas fa-graduation-cap"></i> Visa d'Etude</a></li>
+                        <li><a href="#travail.html"><i class="fas fa-briefcase"></i> Visa de Travail</a></li>
+                        <li><a href="#visiteur.html"><i class="fas fa-plane"></i> Visa Visiteur</a></li>
+                        <li><a href="#residence.html"><i class="fas fa-home"></i> Résidence Permanente</a></li>
+                        <li><a href="#billet.html"><i class="fas fa-ticket-alt"></i> Billets d'avion</a></li>
+                        <li><a href="#logement.html"><i class="fas fa-building"></i> Assistance Logement</a></li>
+                        <li><a href="#sejour.html"><i class="fas fa-id-card"></i> Assistance Titre de Séjour</a></li>
+                        <li><a href="#admissions.html"><i class="fas fa-university"></i> Admissions</a></li>
+                        <li><a href="galerie.html"><i class="fas fa-images"></i> Galerie Photo/Video</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#universites"><i class="fas fa-university"></i> Envoyer/Recevoir un colis</a></li>
+                <li><a href="colis.html"><i class="fas fa-university"></i> Envoyer/Recevoir un colis</a></li>
                 <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
                 <li><a href="index.html#equipe"><i class="fas fa-users"></i> Infos Paiement</a></li>
                 <li><a href="#contact" class="active"><i class="fas fa-envelope"></i> Contact</a></li>
