--- a/galerie.html
+++ b/galerie.html
@@ -239,7 +239,6 @@
             background: linear-gradient(135deg, var(--dark-navy) 0%, var(--primary-blue) 100%);
             padding: 120px 0 60px;
             overflow: hidden;
-            margin-top: 55px;
         }
 
         .galerie-hero::before {
@@ -658,7 +657,6 @@
         }
 
         @media (max-width: 768px) {
-            /* 1. CORRECTION DU SCROLL HORIZONTAL */
             html, body {
                 overflow-x: hidden;
                 max-width: 100vw;
@@ -675,7 +673,7 @@
                 display: block;
             }
 
-            /* 3. NAVBAR - LOGO PLUS PETIT ET CENTRÉ */
+            /* 3. NAVBAR */
             .navbar {
                 padding: 0.8rem 0;
             }
@@ -711,7 +709,7 @@
                 padding: 0.3rem;
             }
 
-            /* 4. MENU MOBILE - CORRECTION DU PROBLÈME DES SOUS-MENUS */
+            /* 4. MENU MOBILE */
             .nav-menu {
                 position: fixed;
                 left: -100%;
