--- a/billet.html
+++ b/billet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISTA - Billets d'Avion | International Success Travel Agency</title>
+    <title>ISTA - Billets d'Avion | International Succes Travel Agency</title>
     <meta name="description" content="ISTA - Réservation de billets d'avion vers toutes les destinations internationales. Meilleurs prix garantis et service client exceptionnel.">
     <meta name="keywords" content="billets d'avion, réservation vol, vols internationaux, compagnies aériennes, voyage, ISTA">
     
@@ -1263,7 +1263,7 @@
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>ISTA</h1>
-                    <p>International Success Travel Agency</p>
+                    <p>International Succes Travel Agency</p>
                 </div>
             </a>
 
@@ -1512,11 +1512,11 @@
             <p>Contactez directement nos experts en réservation de billets d'avion</p>
             
             <div class="cta-buttons">
-                <a href="https://wa.me/237672080166?text=Bonjour%20ISTA,%20je%20souhaite%20obtenir%20un%20devis%20pour%20un%20billet%20d'avion" 
+                <a href="https://wa.me/23757421659?text=Bonjour%20ISTA,%20je%20souhaite%20obtenir%20un%20devis%20pour%20un%20billet%20d'avion" 
                    class="btn-primary btn-whatsapp" target="_blank">
                     <i class="fab fa-whatsapp"></i> Contact WhatsApp
                 </a>
-                <a href="tel:+237672080166" class="btn-secondary">
+                <a href="tel:+23757421659" class="btn-secondary">
                     <i class="fas fa-phone"></i> Nous appeler
                 </a>
                 <a href="contact.html" class="btn-secondary">
@@ -1532,10 +1532,10 @@
             <div class="footer-about">
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="footer-logo">
                 <h3>ISTA</h3>
-                <p>International Success Travel Agency - Votre partenaire de confiance pour tous vos projets d'immigration et d'expédition.</p>
+                <p>International Succes Travel Agency - Votre partenaire de confiance pour tous vos projets d'immigration.</p>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://wa.me/237672080166" aria-label="WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -1543,27 +1543,28 @@
             <div class="footer-links">
                 <h4>Services</h4>
                 <ul>
-                    <li><a href="index.html#services"><i class="fas fa-angle-right"></i> Visa d'Étude</a></li>
-                    <li><a href="index.html#services"><i class="fas fa-angle-right"></i> Visa de Travail</a></li>
-                    <li><a href="index.html#services"><i class="fas fa-angle-right"></i> Visa Visiteur</a></li>
-                    <li><a href="index.html#services"><i class="fas fa-angle-right"></i> Résidence Permanente</a></li>
+                    <li><a href="visa-etude.html"><i class="fas fa-angle-right"></i> Visa d'Étude</a></li>
+                    <li><a href="visa-travail.html"><i class="fas fa-angle-right"></i> Visa de Travail</a></li>
+                    <li><a href="visa-visiteur.html"><i class="fas fa-angle-right"></i> Visa Visiteur</a></li>
+                    <li><a href="residence-permanente.html"><i class="fas fa-angle-right"></i> Résidence Permanente</a></li>
                 </ul>
             </div>
 
             <div class="footer-links">
                 <h4>Contact</h4>
                 <ul>
-                    <li><a href="tel:+237672080166"><i class="fas fa-phone"></i> (+237) 672 080 166</a></li>
-                    <li><a href="tel:+237696214773"><i class="fas fa-phone"></i> (+237) 696 214 773</a></li>
-                    <li><a href="mailto:internationalsuccestravelagence@gmail.com"><i class="fas fa-envelope"></i> Email</a></li>
+                    <li><a href="tel:+237657421659"><i class="fas fa-phone"></i> (+237) 657 421 659</a></li>
+                    <li><a href="tel:+1(438)5245277"><i class="fas fa-phone"></i> +1 (438) 524-5277</a></li>
+                    <li><a href="tel:+33657421659"><i class="fas fa-phone"></i> (+33) 6 57 42 16 59</a></li>
+                    <li><a href="mailto:internationalsuccestravelagence@gmail.com"><i class="fas fa-envelope"></i>internationalsuccestravelagence@gmail.com</a></li>
                 </ul>
             </div>
 
             <div class="footer-links">
                 <h4>Informations</h4>
                 <ul>
-                    <li><a href="index.html#temoignages"><i class="fas fa-angle-right"></i> Témoignages</a></li>
-                    <li><a href="index.html#paiement"><i class="fas fa-angle-right"></i> Paiement</a></li>
+                    <li><a href="temoignages.html"><i class="fas fa-angle-right"></i> Témoignages</a></li>
+                    <li><a href="paiement.html"><i class="fas fa-angle-right"></i> Paiement</a></li>
                     <li><a href="colis.html"><i class="fas fa-angle-right"></i> Colis</a></li>
                     <li><a href="contact.html"><i class="fas fa-angle-right"></i> Contact</a></li>
                 </ul>
@@ -1571,7 +1572,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2026 ISTA - International Success Travel Agency. Tous droits réservés.</p>
+            <p>&copy; 2026 ISTA - International Succes Travel Agency. Tous droits réservés.</p>
         </div>
     </footer>
 
