--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISTA - International Success Travel Agency | Immigration & Visa</title>
+    <title>ISTA - International Succes Travel Agency | Immigration & Visa</title>
     <meta name="description" content="ISTA - Agence de voyage internationale spécialisée dans l'immigration et les services de visa. Nous facilitons vos démarches pour étudier, travailler ou vivre à l'étranger.">
     <meta name="keywords" content="immigration, visa, études à l'étranger, agence de voyage, relocation">
     
@@ -2339,7 +2339,7 @@
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>ISTA</h1>
-                    <p>International Success Travel Agency</p>
+                    <p>International Succes Travel Agency</p>
                 </div>
             </a>
 
