--- a/galerie.html
+++ b/galerie.html
@@ -1576,7 +1576,7 @@
             <div class="footer-about">
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="footer-logo">
                 <h3>ISTA</h3>
-                <p>International Success Travel Agency - Votre partenaire de confiance pour tous vos projets d'immigration.</p>
+                <p>International Succes Travel Agency - Votre partenaire de confiance pour tous vos projets d'immigration.</p>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -1587,27 +1587,28 @@
             <div class="footer-links">
                 <h4>Services</h4>
                 <ul>
-                    <li><a href="etude.html"><i class="fas fa-angle-right"></i> Visa d'Étude</a></li>
-                    <li><a href="travail.html"><i class="fas fa-angle-right"></i> Visa de Travail</a></li>
-                    <li><a href="visiteur.html"><i class="fas fa-angle-right"></i> Visa Visiteur</a></li>
-                    <li><a href="residence.html"><i class="fas fa-angle-right"></i> Résidence Permanente</a></li>
+                    <li><a href="visa-etude.html"><i class="fas fa-angle-right"></i> Visa d'Étude</a></li>
+                    <li><a href="visa-travail.html"><i class="fas fa-angle-right"></i> Visa de Travail</a></li>
+                    <li><a href="visa-visiteur.html"><i class="fas fa-angle-right"></i> Visa Visiteur</a></li>
+                    <li><a href="residence-permanente.html"><i class="fas fa-angle-right"></i> Résidence Permanente</a></li>
                 </ul>
             </div>
 
             <div class="footer-links">
                 <h4>Contact</h4>
                 <ul>
-                    <li><a href="tel:+237672080166"><i class="fas fa-phone"></i> (+237) 672 080 166</a></li>
-                    <li><a href="tel:+237696214773"><i class="fas fa-phone"></i> (+237) 696 214 773</a></li>
-                    <li><a href="mailto:internationalsuccestravelagence@gmail.com"><i class="fas fa-envelope"></i> Email</a></li>
+                    <li><a href="tel:+237657421659"><i class="fas fa-phone"></i> (+237) 657 421 659</a></li>
+                    <li><a href="tel:+1(438)5245277"><i class="fas fa-phone"></i> +1 (438) 524-5277</a></li>
+                    <li><a href="tel:+33657421659"><i class="fas fa-phone"></i> (+33) 6 57 42 16 59</a></li>
+                    <li><a href="mailto:internationalsuccestravelagence@gmail.com"><i class="fas fa-envelope"></i>internationalsuccestravelagence@gmail.com</a></li>
                 </ul>
             </div>
 
             <div class="footer-links">
                 <h4>Informations</h4>
                 <ul>
-                    <li><a href="index.html#temoignages"><i class="fas fa-angle-right"></i> Témoignages</a></li>
-                    <li><a href="index.html#paiement"><i class="fas fa-angle-right"></i> Paiement</a></li>
+                    <li><a href="temoignages.html"><i class="fas fa-angle-right"></i> Témoignages</a></li>
+                    <li><a href="paiement.html"><i class="fas fa-angle-right"></i> Paiement</a></li>
                     <li><a href="colis.html"><i class="fas fa-angle-right"></i> Colis</a></li>
                     <li><a href="contact.html"><i class="fas fa-angle-right"></i> Contact</a></li>
                 </ul>
@@ -1615,7 +1616,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2026 ISTA - International Success Travel Agency. Tous droits réservés.</p>
+            <p>&copy; 2026 ISTA - International Succes Travel Agency. Tous droits réservés.</p>
         </div>
     </footer>
 
