--- a/galerie.html
+++ b/galerie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISTA - Galerie Photo & Vidéo | International Success Travel Agency</title>
+    <title>ISTA - Galerie Photo & Vidéo | International Succes Travel Agency</title>
     <meta name="description" content="Galerie photo et vidéo d'ISTA - Découvrez nos succès, événements et témoignages en images">
     
     <!-- Open Graph / Facebook -->
@@ -1229,7 +1229,7 @@
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>ISTA</h1>
-                    <p>International Success Travel Agency</p>
+                    <p>International Succes Travel Agency</p>
                 </div>
             </a>
 
