--- a/logement.html
+++ b/logement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISTA - Assistance Logement | International Success Travel Agency</title>
+    <title>ISTA - Assistance Logement | International Succes Travel Agency</title>
     <meta name="description" content="Assistance logement ISTA - Services complets pour étudiants et professionnels. Trouvez votre logement idéal à l'étranger avec notre aide experte.">
     <meta name="keywords" content="assistance logement ISTA, logement étudiant, location appartement, recherche logement, aide administrative location">
     
