--- a/galerie.html
+++ b/galerie.html
@@ -1255,7 +1255,7 @@
                 </li>
                 <li><a href="colis.html"><i class="fas fa-box"></i> Envoyer/Recevoir un colis</a></li>
                 <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
-                <li><a href="index.html#paiement"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
+                <li><a href="paiement.html" class="active"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
                 <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
