--- a/contact.html
+++ b/contact.html
@@ -1369,7 +1369,7 @@
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>ISTA</h1>
-                    <p>International Success Travel Agency</p>
+                    <p>International Succes Travel Agency</p>
                 </div>
             </a>
 
@@ -1395,7 +1395,7 @@
                 </li>
                 <li><a href="colis.html"><i class="fas fa-university"></i> Envoyer/Recevoir un colis</a></li>
                 <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
-                <li><a href="index.html#equipe"><i class="fas fa-users"></i> Infos Paiement</a></li>
+                <li><a href="paiement.html" class="active"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
                 <li><a href="#contact" class="active"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
