--- a/colis.html
+++ b/colis.html
@@ -1282,7 +1282,7 @@
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>ISTA</h1>
-                    <p>International Success Travel Agency</p>
+                    <p>International Succes Travel Agency</p>
                 </div>
             </a>
 
@@ -1308,7 +1308,7 @@
                 </li>
                 <li><a href="colis.html" class="active"><i class="fas fa-box"></i> Envoyer/Recevoir un colis</a></li>
                 <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
-                <li><a href="index.html#paiement"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
+                <li><a href="paiement.html" class="active"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
                 <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
