--- a/index.html
+++ b/index.html
@@ -2334,42 +2334,42 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo-section">
-                <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
-                <div class="logo-text">
-                    <h1>ISTA</h1>
-                    <p>International Succes Travel Agency</p>
-                </div>
-            </a>
+    <div class="container nav-container">
+        <a href="index.html" class="logo-section">
+            <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
+            <div class="logo-text">
+                <h1>ISTA</h1>
+                <p>International Succes Travel Agency</p>
+            </div>
+        </a>
 
-            <button class="mobile-toggle" id="mobileToggle">
-                <i class="fas fa-bars"></i>
-            </button>
+        <button class="mobile-toggle" id="mobileToggle">
+            <i class="fas fa-bars"></i>
+        </button>
 
-            <ul class="nav-menu" id="navMenu">
-                <li><a href="index.html" class="active"><i class="fas fa-home"></i> Accueil</a></li>
-                <li class="has-submenu">
-                    <a href="index.html#services"><i class="fas fa-passport"></i> Nos Services <i class="fas fa-chevron-down"></i></a>
-                    <ul class="submenu">
-                        <li><a href="etude.html"><i class="fas fa-graduation-cap"></i> Visa d'Etude</a></li>
-                        <li><a href="travail.html"><i class="fas fa-briefcase"></i> Visa de Travail</a></li>
-                        <li><a href="visiteur.html"><i class="fas fa-plane"></i> Visa Visiteur</a></li>
-                        <li><a href="residence.html"><i class="fas fa-home"></i> Résidence Permanente</a></li>
-                        <li><a href="billet.html"><i class="fas fa-ticket-alt"></i> Billets d'avion</a></li>
-                        <li><a href="logement.html" class="active"><i class="fas fa-building"></i> Assistance Logement</a></li>
-                        <li><a href="sejour.html"><i class="fas fa-id-card"></i> Assistance Titre de Séjour</a></li>
-                        <li><a href="admissions.html"><i class="fas fa-university"></i> Admissions</a></li>
-                        <li><a href="galerie.html"><i class="fas fa-images"></i> Galerie Photo/Video</a></li>
-                    </ul>
-                </li>
-                <li><a href="colis.html"><i class="fas fa-university"></i> Envoyer/Recevoir un colis</a></li>
-                <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
-                <li><a href="paiement.html"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+        <ul class="nav-menu" id="navMenu">
+            <li><a href="index.html"><i class="fas fa-home"></i> Accueil</a></li>
+            <li class="has-submenu">
+                <a href="#" class="submenu-trigger"><i class="fas fa-passport"></i> Nos Services <i class="fas fa-chevron-down"></i></a>
+                <ul class="submenu">
+                    <li><a href="etude.html"><i class="fas fa-graduation-cap"></i> Visa d'Etude</a></li>
+                    <li><a href="travail.html"><i class="fas fa-briefcase"></i> Visa de Travail</a></li>
+                    <li><a href="visiteur.html"><i class="fas fa-plane"></i> Visa Visiteur</a></li>
+                    <li><a href="residence.html"><i class="fas fa-home"></i> Résidence Permanente</a></li>
+                    <li><a href="billet.html" class="active"><i class="fas fa-ticket-alt"></i> Billets d'avion</a></li>
+                    <li><a href="logement.html"><i class="fas fa-building"></i> Assistance Logement</a></li>
+                    <li><a href="sejour.html"><i class="fas fa-id-card"></i> Assistance Titre de Séjour</a></li>
+                    <li><a href="admissions.html"><i class="fas fa-university"></i> Admissions</a></li>
+                    <li><a href="galerie.html"><i class="fas fa-images"></i> Galerie Photo/Video</a></li>
+                </ul>
+            </li>
+            <li><a href="colis.html"><i class="fas fa-box"></i> Envoyer/Recevoir un colis</a></li>
+            <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
+            <li><a href="paiement.html"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
+            <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+        </ul>
+    </div>
+</nav>
 
     <!-- Section Hero -->
     <section class="hero" id="accueil">
