--- a/contact.html
+++ b/contact.html
@@ -1369,7 +1369,7 @@
                 <img src="assets/images/remove.png" alt="ISTA Logo" class="logo-img">
                 <div class="logo-text">
                     <h1>ISTA</h1>
-                    <p>International Succes Travel Agency</p>
+                    <p>International Success Travel Agency</p>
                 </div>
             </a>
 
@@ -1395,7 +1395,7 @@
                 </li>
                 <li><a href="colis.html"><i class="fas fa-university"></i> Envoyer/Recevoir un colis</a></li>
                 <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
-                <li><a href="paiement.html" class="active"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
+                <li><a href="paiement.html"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
                 <li><a href="#contact" class="active"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
@@ -1420,14 +1420,14 @@
                         <li>
                             <i class="fas fa-building"></i>
                             <div>
-                                <strong>ISTA - International Success Travel Agency de Yaoundé</strong><br>
+                                <strong>ISTA - International Succes Travel Agence de Yaoundé</strong><br>
                                 Sis Madison Essos<br>
                             </div>
                         </li>
                         <li>
                             <i class="fas fa-building"></i>
                             <div>
-                                <strong>ISTA - International Success Travel Agency de Douala</strong><br>
+                                <strong>ISTA - International Succes Travel Agence de Douala</strong><br>
                                 Sis Carrefour Bassong Immeuble Mont Baloua<br>
                             </div>
                         </li>
@@ -1707,7 +1707,7 @@
                     <li><a href="tel:+237657421659"><i class="fas fa-phone"></i> (+237) 657 421 659</a></li>
                     <li><a href="tel:+1(438)5245277"><i class="fas fa-phone"></i> +1 (438) 524-5277</a></li>
                     <li><a href="tel:+33657421659"><i class="fas fa-phone"></i> (+33) 6 57 42 16 59</a></li>
-                    <li><a href="mailto:internationalsuccestravelagence@gmail.com"><i class="fas fa-envelope"></i>internationalsuccestravelagence@gmail.com</a></li>
+                    <li><a href="mailto:internationalsuccestravelagenc@gmail.com"><i class="fas fa-envelope"></i>internationalsuccestravelagenc@gmail.com</a></li>
                 </ul>
             </div>
 
