--- a/galerie.html
+++ b/galerie.html
@@ -1255,7 +1255,7 @@
                 </li>
                 <li><a href="colis.html"><i class="fas fa-box"></i> Envoyer/Recevoir un colis</a></li>
                 <li><a href="index.html#temoignages"><i class="fas fa-star"></i> Témoignages</a></li>
-                <li><a href="paiement.html" class="active"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
+                <li><a href="paiement.html"><i class="fas fa-credit-card"></i> Infos Paiement</a></li>
                 <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
@@ -1600,7 +1600,7 @@
                     <li><a href="tel:+237657421659"><i class="fas fa-phone"></i> (+237) 657 421 659</a></li>
                     <li><a href="tel:+1(438)5245277"><i class="fas fa-phone"></i> +1 (438) 524-5277</a></li>
                     <li><a href="tel:+33657421659"><i class="fas fa-phone"></i> (+33) 6 57 42 16 59</a></li>
-                    <li><a href="mailto:internationalsuccestravelagence@gmail.com"><i class="fas fa-envelope"></i>internationalsuccestravelagence@gmail.com</a></li>
+                    <li><a href="mailto:internationalsuccestravelagenc@gmail.com"><i class="fas fa-envelope"></i>internationalsuccestravelagenc@gmail.com</a></li>
                 </ul>
             </div>
 
